--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "pdftoimg-js",
   "description": "A javascript library that help to convert pdf to img in both platform nodejs and browser",
-  "version": "0.2.3",
+  "version": "0.2.5",
   "license": "MIT",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "bin": {
+    "pdftoimg": "./dist/cli.js"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -76,7 +79,7 @@
     "typescript-eslint": "^8.27.0"
   },
   "dependencies": {
-    "commander": "^13.1.0",
-    "pdfjs-dist": "4.8.69"
+    "pdfjs-dist": "4.8.69",
+    "yargs": "^18.0.0"
   }
 }
