--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "author": "Rashed Iqbal <dev.rashediqbal@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/iqbal-rashed/pdftoimg-js.git"
+    "url": "https://github.com/bg364/pdftoimg-js.git"
   },
   "homepage": "https://github.com/iqbal-rashed/pdftoimg-js#readme",
   "bugs": {
